# XREPORT-radiological-reports-generator

./: .dockerignore  .gitignore  CODEX_REMOVE_TAURI.md  Dockerfile.txt  README.md  XRAYREP.py  XREPORT.py  configurations.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_and_maintenance.bat  start_on_windows.bat  start_on_windows.ps1
.agent/: GENERAL_RULES.md
.agent/rules/: BACKGROUND_JOBS.md  GENERAL_RULES.md  GUIDELINES_PYTHON.md  GUIDELINES_TESTS.md  GUIDELINES_TYPESCRIPT.md  README_WRITING.md
.github/workflows/: ci.yml  desktop-release.yml
QA/: e2e-validation-2026-07-23.md
XREPORT/: XREPORT.bat  build_with_tauri.bat  configurations.json  configurations.py  setup_and_maintenance.bat  start_on_windows.bat  start_on_windows_tauri.bat
XREPORT/app/: app.py  configuration.py  constants.py  logger.py  requirements.txt  variables.py
XREPORT/client/: index.html  package-lock.json  package.json  vite.config.ts
XREPORT/commons/: configuration.py  configurations.py  constants.py  logger.py  pathfinder.py  variables.py
XREPORT/config/: configurations.py  pathfinder.py
XREPORT/data/: data_preprocessing.py  data_validation.ipynb
XREPORT/database/: build_processed_dataset.py
XREPORT/dataset/: build_processed_dataset.py
XREPORT/inference/: generate_reports.py  report_generator.py
XREPORT/preprocessing/: data_preprocessing.py
XREPORT/processing/: data_preprocessing.py  dataset_preprocessing.py
XREPORT/scripts/: initialize_database.py
XREPORT/server/: __init__.py  app.py
XREPORT/settings/: .env  .env.cloud.example  .env.local.tauri.example  app_configurations.json  configurations.json  launcher_configurations.ini  server_configurations.json  tokenizers_index.json
XREPORT/setup/: requirements.txt
XREPORT/tests/: conftest.py  run_tests.bat  verify_loader.py
XREPORT/training/: data_preprocessing.py  model_evaluation.ipynb  model_training.py  train_from_checkpoint.py  train_model.py
XREPORT/utils/: generators.py  models.py  validation.py
XREPORT/validation/: data_validation.ipynb  dataset_validation.ipynb  dataset_validation.py  evaluate_model.py  model_evaluation.py  (+2 more)
app/maira2_worker/: pyproject.toml
app/maira2_worker/maira2_worker/: __init__.py  app.py
app/maira2_worker/tests/: test_worker_runtime.py
components/: data_assets.py  global_paths.py  model_assets.py
data/: data_validation.ipynb  data_validation.py  text_embeddings.py
dataset/: XREP_test.csv  XREP_train.csv
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: PACKAGING_AND_RUNTIME_MODES.md
inference/: report_generator.py
legacy/: .gitignore
model/: model_evaluation.py  model_training.py
modules/: XREPORT_generator.py  XREPORT_preprocessing.py  XREPORT_training.py  data_preprocessing.py  data_validation.py  global_variables.py  model_evaluation.py  model_training.py  report_generator.py
scripts/: cpu_environment_setup.bat  create_cpu_environment.bat  create_gpu_environment.bat  environment_setup.bat  gpu_environment_setup.bat  package_setup.bat  remove_logs.bat
settings/: .env  .env.example  configurations.json  inference_models.json
setup/: XREPORT_installer.bat  install_on_windows.bat  setup_and_maintenance.bat
tests/: conftest.py  run_tests.bat  verify_multiple_datasets.py  verify_pagination.py
training/: model_evaluation.ipynb  model_evaluation.py  model_training.py  tokenizer_training.py
utils/: callbacks.py  data_assets.py  model_assets.py  models.py  preprocessing.py  token_assets.py  validation_assets.py
(+612 files in other folders)
