[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "XREPORT"
version = "2.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn>=0.40.0",
    "numpy==2.4.0",
    "pandas==2.3.3",
    "tqdm==4.67.1",    
    "SQLAlchemy==2.0.45",
    "psycopg[binary]==3.3.2",
    "python-dotenv==1.2.1",    
    "pytest==9.0.2",
    "folium==0.20.0",
    "pillow==12.0.0",
    "keras==3.13.0",
    "tensorflow==2.20.0",
    "torch==2.9.1",
    "transformers==4.57.3",
    "opencv-python==4.12.0.88",
    "nltk==3.9.2",
    "matplotlib==3.10.8",

]

[tool.hatch.build.targets.wheel]
packages = ["XREPORT"] 
