[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "XREPORT"
version = "2.1"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "torch==2.10.0+cu130",
    "keras==3.13.1", 
    "numpy==2.4.1",
    "pandas==3.0.0",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.43",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1", 
    "python-multipart>=0.0.21",  
    "pillow==12.0.0", 
    "transformers==4.57.3",
    "opencv-python==4.13.0.90",
    "nltk==3.9.2",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["XREPORT"] 

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
# torchvision = { index = "pytorch-cu130" }
# torchaudio  = { index = "pytorch-cu130" }

