[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xreport-maira2-worker"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.0",
    "torch==2.10.0+cu130",
    "transformers==4.51.3",
    "huggingface-hub==0.36.0",
    "pillow==12.0.0",
    "protobuf==6.33.4",
    "sentencepiece==0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["maira2_worker"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
